Fixed so main navigation is not visible when there is no room for it

--- a/patterns/01-modules/navigation/nav-main-list/nav-main-list.css
+++ b/patterns/01-modules/navigation/nav-main-list/nav-main-list.css
@@ -10,7 +10,7 @@
 .nav-main {
     display: none;
 
-    @media (--viewport-sm-min) {
+    @media (--viewport-md-min) {
         display: block;
     }
 }
